Fixed width of some html elements that were overflowing the body.

--- a/HoojaWeb/wwwroot/css/site.css
+++ b/HoojaWeb/wwwroot/css/site.css
@@ -11,7 +11,9 @@ html {
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
-
+.setWidth100{
+    width: 100%;
+}
 html {
     position: relative;
     min-height: 100%;
